--- a/home.html
+++ b/home.html
@@ -1,13 +1,330 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+    <title>Lepermislebri</title>
+    <link rel="stylesheet" href="./assets/css/home.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- #####################font awesome################ -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+    <!-- #################1st card################ -->
+    <div class="card-background">
+        <div class="container-fluid p-2 p-md-4">
+            <div class="row">
+                <div class="col-md-4 ">
+                    <div class="card  border-0">
+                        <div class="card-body code-card">
+                            <h5 class="card-title text-center"><i class="fa-solid fa-euro-sign"></i></h5>
+                            <h6 class="card-subtitle mb-2 text-center">Le code à 19€ seulement</h6>
+                            <p class="card-text text-center">Pas de frais de dossiers ni de coûts cachés pour réviser...
+                                et 250€
+                                d’économies <i class="fa-solid fa-circle-info"></i></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-md-0 mt-3  ">
+                    <div class="card   border-0">
+                        <div class="card-body code-card">
+                            <h5 class="card-title text-center"><i class="fa-regular fa-id-card"></i></h5>
+                            <h6 class="card-subtitle mb-2 text-center">445 000 élèves nous font confiance</h6>
+                            <p class="card-text text-center">C’est plus de 5 Stade de France... Autant vous dire qu’on a
+                                de l’expérience ! </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-md-0 mt-3  ">
+                    <div class="card  border-0">
+                        <div class="card-body code-card">
+                            <h5 class="card-title text-center"><i class="fa-regular fa-star"></i></h5>
+                            <h6 class="card-subtitle mb-2 text-center">93% de candidats satisfaits</h6>
+                            <p class="card-text text-center">Maximisez vos chances de réussite avec nos coaches et
+                                fiches de révisions personnalisées.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!--################ 2nd cards ###############-->
+    <div class="container-fluid p-2 p-md-4">
+        <h1 class="text-center">Prêt à passer le code moins cher ?</h1>
+        <div class="row pt-5">
+            <div class="col-md-4 mt-md-0 mt-3">
+                <div class="card border-0">
+                    <div class="card-body code-card-2">
+                        <h6 class="card-subtitle mb-2 ">Code de la route</h6>
+                        <ul class="list-unstyled pt-2">
+                            <li class="d-flex">
+                                <i class="fa-solid fa-check"></i>&nbsp;<p class="card-text">1 an d’accès à la formation
+                                    code</p>
+                            </li>
+                        </ul>
+
+                        <div class="d-flex justify-content-between button-card p-button1">
+                            <h4>
+                                <span>19</span>
+                                <sup><i class="fa-solid fa-euro-sign"></i></sup>
+                            </h4>
+                            <a href="#" class="btn"><i class="fa-solid fa-check"></i>&nbsp;Sélectionner</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mt-md-0 mt-3  ">
+                <div class="card border-0">
+                    <div class="card-body code-card-2">
+                        <h6 class="card-subtitle mb-2 text-center">Code + examen</h6>
+                        <ul class="list-unstyled pt-2">
+                            <li class="d-flex">
+                                <i class="fa-solid fa-check"></i>&nbsp;<p class="card-text">1 an d’accès à la formation
+                                    code </p>
+                            </li>
+                            <li class="d-flex">
+                                <i class="fa-solid fa-check"></i>&nbsp;<p class="card-text">Coaching personnalisé avec
+                                    nos experts</p>
+                            </li>
+                            <li class="d-flex">
+                                <i class="fa-solid fa-check"></i>&nbsp;<p class="card-text">Une place à l'examen du code
+                                    de la route avec La Poste</p>
+                            </li>
+                        </ul>
+                        <div class="d-flex justify-content-between button-card p-button2">
+                            <h4>
+                                <span>44</span>
+                                <sup><i class="fa-solid fa-euro-sign"></i></sup>
+                            </h4>
+                            <a href="#" class="btn"><i class="fa-solid fa-check"></i>&nbsp;Sélectionner</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mt-md-0 mt-3  ">
+                <div class="card border-0">
+                    <div class="card-body code-card-2 code-border2">
+
+                        <h6 class="card-subtitle mb-2 ">Code + examen + 1re heure de conduite</h6>
+                        <ul class="list-unstyled pt-2">
+                            <li class="d-flex">
+                                <i class="fa-solid fa-check"></i>&nbsp;<p class="card-text">Une place à l'examen du
+                                    code de la route avec La Poste</p>
+                            </li>
+                            <li class="d-flex">
+                                <i class="fa-solid fa-check"></i>&nbsp;<p class="card-text">1 an d’accès à la
+                                    formation code</p>
+                            </li>
+                            <li class="d-flex">
+                                <i class="fa-solid fa-check"></i>&nbsp;<p class="card-text">Créneaux 7j/7 de 6h à
+                                    23h</p>
+
+                            </li>
+                            <li class="d-flex">
+                                <i class="fa-solid fa-check"></i>&nbsp;<p class="card-text">Réservation avec
+                                    l’enseignant de votre choix pendant 1 an</p>
+
+                            </li>
+
+                        </ul>
+                        <div class="d-flex justify-content-between button-card button-card2 pt-2">
+                            <h4>
+                                <span>64</span>
+                                <sup><i class="fa-solid fa-euro-sign"></i>90</sup>
+                            </h4>
+                            <a href="#" class="btn"><i class="fa-solid fa-check"></i>&nbsp;Sélectionner</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!--############################## faq############################## -->
+    <div class="faq-background mt-5">
+        <h1 class="pt-4 text-center">Une plateforme dédiée pour votre réussite</h1>
+        <div class="container-fluid p-2 p-md-4">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item faq-main border-0">
+                            <h2 class="accordion-header faq-head">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    Cours et tests de code en ligne
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body faq-text">
+                                    <ul>
+                                        <li>Réviser le code de la route devient simple avec nos cours vidéos</li>
+                                        <li>Entraînements en ligne sur les 10 thèmes conformes à l'examen théorique 2023
+                                        </li>
+                                        <li>Suivez votre progression et comparez votre niveau au code de la route avec
+                                            les autres candidats lePERMISLIBRE</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item faq-main mt-4 border-0">
+                            <h2 class="accordion-header faq-head">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                    aria-controls="flush-collapseTwo">
+                                    Des révisions ludiques en vidéos
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body faq-text">
+                                    <ul>
+                                        <li>Visionnez chaque semaine nos nouvelles vidéos en ligne</li>
+                                        <li>Un chat avec une enseignante d’auto-école diplômée et expérimentée</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item faq-main mt-4 border-0">
+                            <h2 class="accordion-header faq-head">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    Examens blancs
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body faq-text">
+                                    <ul>
+                                        <li>Testez-vous en condition réelle avec des examens blancs pour préparer votre
+                                            réussite à l'examen théorique</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#" class="btn mt-5 faq-button py-2">je passe le code</a>
+                    </div>
+                </div>
+                <div class="col-md-5 mt-md-0 mt-3">
+                    <img src="./assets/img/side-img.PNG" alt="" class="w-100">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- blank -->
+    <div class=" bg-blank">
+    </div>
+
+
+    <!-- ###########card3 ############-->
+    <div class="profile-bg">
+        <h1 class="text-center pt-4">Ils ont obtenu leur code et leur permis grâce à nous</h1>
+        <div class="container-fluid p-2 p-md-4">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="card  border-0 ">
+                        <div class="card-body profile-code">
+                            <h5 class="card-title head-img">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <p class="P">Stef</p>
+                                    </div>
+                                    <div class="col-4 justify-content-end">
+                                        <div><img src="./assets/img/star.png" alt=""></div>
+                                    </div>
+                                        <div class="col-4 d-flex profile-verfile">
+                                            <i class="fa-regular fa-circle-check mt-1"></i>&nbsp
+                                            <p>Vérifié</p>
+                                        </div>     
+                                </div>
+                            </h5>
+                            <p class="card-text">“Très bonne application !!! mon code en 1 mois avec 38
+                                bonnes réponses je suis trop content !!! bonne chance à vous tous !!!”</p>
+                            <a href="#" class="card-link profile-link">Voir sur Trustpilot &nbsp;<i
+                                    class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mt-md-0 mt-3  ">
+                    <div class="card   border-0">
+                        <div class="card-body profile-code">
+                            <h5 class="card-title head-img">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <p class="P">Winnei E.</p>
+                                    </div>
+                                    <div class="col-4 justify-content-end">
+                                        <div><img src="./assets/img/star.png" alt=""></div>
+                                    </div>
+                                        <div class="col-4 d-flex profile-verfile">
+                                            <i class="fa-regular fa-circle-check mt-1"></i>&nbsp
+                                            <p>Vérifié</p>
+                                        </div>     
+                                </div>
+                            </h5>
+                            <p class="card-text">“Expérience formidable et accompagnement assuré du code à
+                                l’examen pratique et même après. Je ne regrette pas de leur avoir accordé ma confiance
+                                et le recommande...”</p>
+                            <a href="#" class="card-link profile-link">Voir sur Trustpilot &nbsp;<i
+                                    class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mt-lg-0 mt-3  ">
+                    <div class="card  border-0">
+                        <div class="card-body profile-code">
+                            <h5 class="card-title  head-img">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <p class="P">Ange S.</p>
+                                    </div>
+                                    <div class="col-4 justify-content-end">
+                                        <div><img src="./assets/img/star.png" alt=""></div>
+                                    </div>
+                                        <div class="col-4 d-flex profile-verfile">
+                                            <i class="fa-regular fa-circle-check mt-1"></i>&nbsp
+                                            <p>Vérifié</p>
+                                        </div>     
+                                </div>
+                            </h5>
+                            <p class="card-text ">“J'y croyais plus et je me suis inscrite sur le
+                                permislibre.fr, j'ai obtenu un coaching et avec les encouragements, les conseils et une
+                                méthode de travaille, j'y suis...”</p>
+                            <a href="#" class="card-link profile-link">Voir sur Trustpilot &nbsp;<i
+                                    class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+
+
+      
+</body>
+
 </html>
